# tobkcilc

./: .env  .espup.sh  Cargo.toml  Justfile  README.md  karabiner.json  partitions.csv  sdkconfig.defaults  set-audio-source  set-audio-source.sh
.cargo/: config.toml
src/: constants.rs  impls.rs  keyboard.rs  lib.rs  main.rs
tools/: symlink-usb.sh
