
[package]
name = "tobkcilc"
edition = "2021"
version = "0.1.0"

[dependencies]
lazy_static = { version = "1.4.0" }
esp-idf-hal = { version = "0.42.5" }
esp-idf-svc = { version = "0.47.3" }
esp-idf-sys = { version = "0.33" }
anyhow = { version = "1.0.75" }
log = { version = "0.4" }
esp32-nimble = { git = "https://github.com/oleander/esp32-nimble.git", branch = "develop" }

[package.metadata.esp-idf-sys]
esp_idf_version = "tag:v4.4.6"

[build-dependencies]
embuild = { version = "0.31.4" }

