
[package]
name = "tobkcilc"
edition = "2021"
version = "0.1.0"

[dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false, features = ["embassy-time", "embassy-time-driver", "embassy-time-isr-queue"] }
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt", "time", "sync"] }
embassy-time = { version = "0.1.2", features = ["tick-hz-1_000_000", "defmt"], default-features = false }
esp-idf-hal = { version = "0.42.5", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
log = { version = "0.4", default-features = false }
# esp32-nimble = { git = "https://github.com/oleander/esp32-nimble.git", branch = "develop" }
esp32-nimble = { git = "https://github.com/oleander/esp32-nimble.git", branch = "develop" }
rand = "0.8.5"

[package.metadata.esp-idf-sys]
esp_idf_version = "tag:v4.4.6"

[profile.release]
debug = true

[build-dependencies]
embuild = "0.31.2"
